--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ f = 1;
 </div>
 <div id="1div">
 <h2> The Eohippus</h2>
-<p> This was the first form of the horse it was called the Eohippus it lived about 40-50 million years ago. t is very different from the horse that we know today. It was only about 24 inches tall and had a curved back along with a much smaller snout and it’s teeth weren't as developed as todays horse. It was a small forest animal that was much like a modern day deer in the way it moved but looked most like a dog.
+<p> This was the first form of the horse it was called the Eohippus it lived about 40-50 million years ago. It is very different from the horse that we know today. It was only about 24 inches tall and had a curved back along with a much smaller snout and it’s teeth weren't as developed as today's horse. It was a small forest animal that was much like a modern day deer in the way it moved but looked most like a dog.
 </p>
 </div>
 <div id="2div">
@@ -156,7 +156,7 @@ This species formed about 15 million years ago. The horse didn't evolve from thi
 <div id="6div">
 <h2>The Eqquis</h2>
 <p>
-This is the modern day horse it is about 52 inches high. The leg bones fused together and ligaments formed to stop twisting of the hooves. It nows has much longer legs, neck, spine, and skull than the original Eohippus. It’s brain also developed more to make it smarter.
+This is the modern day horse it is about 52 inches high. The leg bones fused together and ligaments formed to stop twisting of the hooves. It now has much longer legs, neck, spine, and skull than the original Eohippus. It’s brain also developed more to make it smarter.
 </p>
 </div>
 <div id="Super">
