--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ f = 1;
 <body Onload="tick()">
 <div id="top">
 <h1 align="center">The Evolution Of The Horse</h1>
-<p align="center">Click on of the images to learn more about each speices!</p>
+<p align="center">Click on of the images to learn more about each species!</p>
 </div>
 <div id="timeline" align="center">
 <button type="button" onclick="change1()" id="1"> <img style="height:100px; width:175px" src="https://live.staticflickr.com/501/31658758664_363530c1c4_b.jpg" id="1-1"></button>
@@ -123,33 +123,33 @@ f = 1;
 </div>
 <div id="1div">
 <h2> The Eohippus</h2>
-<p> This was the first form of the horse it was called the Eohippus it lived about 40-50 million years ago. It is very different from the horse that we know today. It was only about 24 inches tall and had a curved back along with a much smaller snout and it’s teeth weren't as developed as today's horse. It was a small forest animal that was much like a modern day deer in the way it moved but looked most like a dog.
+<p> This was the first form of the horse it was called the Eohippus it lived about 40-50 million years ago. It is very different from the horse that we know today. It was only about 24 inches tall and had a curved back along with a much smaller snout and its teeth weren't as developed as today's horse. It was a small forest animal that was much like a modern-day deer in the way it moved but looked most like a dog.
 </p>
 </div>
 <div id="2div">
 <h2>The Mesohippus</h2> 
 <p>
-This early evolution of the horse lived about 35 million years ago. It is still very different from a horse but much has changed since the times of the Eohippus, it is now about 24 inches tall and has longer legs and a straighter back that resembles the one of today's horses. Both its neck and snout are longer and has only 3 toes on each feet instead of 4.
+This early evolution of the horse lived about 35 million years ago. It is still very different from a horse but much has changed since the times of the Eohippus, it is now about 24 inches tall and has longer legs and a straighter back that resembles one of today's horses. Both its neck and snout are longer and has only 3 toes on each foot instead of 4.
 </p>
 </div>
 
 <div id="3div">
 <h2>The Miohippus</h2>
 <p>
-This species appeared about 36 million years ago. It is very similar to the Mesohippus. The only changes between the two are that it now has a bigger skull with a big crest and it’s ankle joints are now much different. 
+This species appeared about 36 million years ago. It is very similar to Mesohippus. The only changes between the two are that it now has a bigger skull with a big crest and it’s ankle joints are now much different. 
 </p>
 </div>
 
 <div id="4div">
 <h2>The Marychippus</h2>
-<p>This formed about 17 millions years ago and begins to take the shape of the horse be know today. It is now about 40 inches tall and developed larger teeth roots that accommodated it’s bigger skull. The brain got larger and more complex allowing the horse to become more agile. 
+<p>This formed about 17 million years ago and begins to take the shape of the horse we know today. It is now about 40 inches tall and developed larger teeth roots that accommodated its bigger skull. The brain got larger and more complex allowing the horse to become more agile. 
 </p>
 </div>
 
 <div id="5div">
 <h2>The Pliohpippus</h2> 
 <p>
-This species formed about 15 million years ago. The horse didn't evolve from this species but is still part of the evolutionary tree. It’s snout has a deep facial fossae while the horse doesn't. It also had curved teeth which are different front straight modern day horses straight teeth.
+This species formed about 15 million years ago. The horse didn't evolve from this species but is still part of the evolutionary tree. Its snout has a deep facial fossa while the horse doesn't. It also had curved teeth which are different front straight modern-day horses straight teeth.
 </p>
 </div>
 
@@ -165,7 +165,7 @@ This is the modern day horse it is about 52 inches high. The leg bones fused tog
 </p>
 </div>
 <div id="embyo">
-<h2> Embryology evidence in todays speices</h2>
+<h2> Embryology evidence in todays species</h2>
 <p> 
 As you can see in the picture below the embryos all look similar when they first start forming, but as they get older that take more distinct shapes. The younger embryos tell us that because they are all similar they came from one very old ancestor. This is used as evidence for evolution.</p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Haeckel_drawings.jpg" width="750px" height="400px">
@@ -173,7 +173,7 @@ As you can see in the picture below the embryos all look similar when they first
 <div id="geo">
 <h2>Evidence of evolution through DNA</h2>
 <p>
-DNA between different species can be used to prove how closely related two species are two each other. Depending on how similar the DNA of a species is to another we can determine when the two species diverged from one another in the evolutionary tree depending on how much or how little they relate to each other. An example of this is between humans and chimpanzees, by looking at the DNA of both species all but about 1.2% of the genes are similar so this leads us to believe that humans and chimpanzees diverged as a species not to long ago. 
+DNA between different species can be used to prove how closely related two species are two each other. Depending on how similar the DNA of a species is to another we can determine when the two species diverged from one another in the evolutionary tree depending on how much or how little they relate to each other. An example of this is between humans and chimpanzees, by looking at the DNA of both species all but about 1.2% of the genes are similar so this leads us to believe that humans and chimpanzees diverged as a species not too long ago. 
 
 
 </p>
@@ -181,10 +181,13 @@ DNA between different species can be used to prove how closely related two speci
 <div id="body">
 <h2>Evidence of evolution through structure</h2>
 <p>
-Many species today have similarities within their anatomy, this is another example of evolution. An example of this occurring are the 3 common bones (radius, humorous, and the ulna)  in the arm of many species, including humans, whales, birds, and reptiles. Scientist use this as evidence of evolution.        
+Many species today have similarities within their anatomy, this is another example of evolution. An example of this occurring is the 3 common bones (radius, humorous, and the ulna)  in the arm of many species, including humans, whales, birds, and reptiles. Scientists use this as evidence of evolution.        
 
 
 </p>
 </div>
+ <div id="cite">
+  a href="https://docs.google.com/document/d/1JvNCnh8cMcy5q_Xt4UtFq0vQoMRNGljztVezxlwiXkE/edit?usp=sharing">Citations</a>
+ </div>
 </body>
 </html
