--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Many species today have similarities within their anatomy, this is another examp
 </p>
 </div>
  <div id="cite">
-  a href="https://docs.google.com/document/d/1JvNCnh8cMcy5q_Xt4UtFq0vQoMRNGljztVezxlwiXkE/edit?usp=sharing">Citations</a>
+  <a href="https://docs.google.com/document/d/1JvNCnh8cMcy5q_Xt4UtFq0vQoMRNGljztVezxlwiXkE/edit?usp=sharing">Citations</a>
  </div>
 </body>
 </html
